FullQa New/src/PS Enterprise/objects/External_API_Credential__mdt.object
<CustomObject>
    <fields>
        <fullName>API_URL__c</fullName>
        <description>URL for the external API call</description>
        <label>API URL</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crypto_Key__c</fullName>
        <description>Key for the external API call</description>
        <label>Crypto Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Encrypt the Crypto Key into a signature</description>
        <label>Encrypt</label>
        <type>Checkbox</type>
    </fields>
    <label>External API Credential</label>
    <pluralLabel>External API Credentials</pluralLabel>
</CustomObject>